--- a/your-code/Solutions.ipynb
+++ b/your-code/Solutions.ipynb
@@ -25,11 +25,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here1\n"
+    "tup=(\"I\",)\n"
    ]
   },
   {
@@ -43,11 +43,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 145,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'tuple'>\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "print(type(tup))\n"
    ]
   },
   {
@@ -65,13 +73,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 146,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'tuple' object has no attribute 'append'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\sersu\\IRONHACK\\1.2-lab-tuple-set-dict\\your-code\\Solutions.ipynb Celda 7\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/sersu/IRONHACK/1.2-lab-tuple-set-dict/your-code/Solutions.ipynb#W6sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m tup\u001b[39m.\u001b[39;49mappend(\u001b[39m\"\u001b[39m\u001b[39mr\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mo\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mn\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mh\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39ma\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mc\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mk\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'tuple' object has no attribute 'append'"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n",
+    "tup.append(\"r\", \"o\", \"n\", \"h\", \"a\", \"c\", \"k\")\n",
     "\n",
-    "# Your explanation here\n"
+    "#Da error porque las tuplas son inmutables y no tienen el comando append\n"
    ]
   },
   {
@@ -91,11 +111,23 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('I', 'r', 'o', 'n', 'h', 'a', 'c', 'k')\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n",
+    "tup=list(tup)\n",
+    "tup=[\"I\",'r','o','n','h','a','c','k']\n",
+    "tup=tuple(tup)\n",
+    "print(tup)\n",
     "\n",
-    "# Your explanation here\n"
+    "#Se puede hacer convirtiendo la tupla en una lista \n",
+    "\n"
    ]
   },
   {
@@ -115,9 +147,26 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['I', 'r', 'o', 'n', 'h', 'a', 'c', 'k']\n",
+      "('I', 'r', 'o', 'n')\n",
+      "('h', 'a', 'c', 'k')\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "tup=list(tup)\n",
+    "tup1=tup[:4]\n",
+    "tup1=tuple(tup1)\n",
+    "tup2=tup[-4:len(tup)]\n",
+    "tup2=tuple(tup2)\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -133,9 +182,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('I', 'r', 'o', 'n', 'h', 'a', 'c', 'k')\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "tup3=tup1+tup2\n",
+    "print(tup3)\n"
    ]
   },
   {
@@ -149,9 +207,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El resultado es correcto\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "contador1=len(tup1)+len(tup2)\n",
+    "if len(tup3)==contador1:\n",
+    "    print(\"El resultado es correcto\")\n",
+    "else:\n",
+    "    print(\"Error\")\n"
    ]
   },
   {
@@ -165,9 +235,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "h\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "print(tup3[4])\n"
    ]
   },
   {
@@ -189,9 +267,28 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "la letra a esta en tup3\n",
+      "la letra b no está en tup3\n",
+      "la letra c esta en tup3\n",
+      "la letra d no está en tup3\n",
+      "la letra e no está en tup3\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "letters=[\"a\",\"b\",\"c\",\"d\",\"e\"]\n",
+    "\n",
+    "for e in letters:\n",
+    "    if e in tup3:\n",
+    "        print(\"la letra {} esta en tup3\".format(e))\n",
+    "    else:\n",
+    "        print(\"la letra {} no está en tup3\".format(e))\n",
+    "        \n"
    ]
   },
   {
@@ -205,11 +302,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "1\n",
+      "3\n",
+      "la letra d no está en tup3\n",
+      "la letra e no está en tup3\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "letters=[\"a\",\"b\",\"c\",\"d\",\"e\"]\n",
+    "\n",
+    "\n",
+    "for e in letters:\n",
+    "    if e in tup3:\n",
+    "        \n",
+    "        contador=tup3.count(e)\n",
+    "        print(contador)\n",
+    "    else:\n",
+    "        print(\"la letra {} no está en tup3\".format(e))\n"
    ]
   },
   {
@@ -252,9 +370,20 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 10, 11, 14, 15, 16, 17, 19, 20, 21, 22, 25, 26, 28, 29, 30, 31, 32, 33, 35, 36, 37, 38, 39, 40, 41, 42, 44, 45, 47, 48, 49, 50, 51, 52, 53, 54, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 68, 69, 70, 71, 72, 73, 74, 75, 76, 78, 79, 82, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 97, 98, 99]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "sample_list_1=[]\n",
+    "sample_list_1=random.sample(range(100),k=80)\n",
+    "sample_list_1.sort()\n",
+    "print(sample_list_1)\n"
    ]
   },
   {
@@ -268,9 +397,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "80\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "set1=set(sample_list_1)\n",
+    "print(len(set1))# Your code here"
    ]
   },
   {
@@ -291,9 +429,26 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[45, 4, 64, 22, 54, 13, 85, 84, 56, 31, 67, 72, 7, 69, 91, 96, 70, 83, 13, 31, 41, 66, 28, 84, 60, 25, 85, 80, 60, 99, 99, 84, 76, 67, 2, 96, 71, 96, 26, 48, 23, 35, 11, 82, 98, 18, 31, 36, 59, 97, 26, 93, 26, 46, 43, 30, 21, 87, 46, 59, 65, 36, 64, 57, 82, 41, 78, 42, 43, 34, 51, 12, 22, 44, 17, 92, 67, 74, 7, 86]\n",
+      "80\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "sample_list_2=[]\n",
+    "contador=0\n",
+    "\n",
+    "for n in range(80):\n",
+    "    \n",
+    "        sample_list_2.append(random.randint(0,100))\n",
+    "    \n",
+    "print(sample_list_2)\n",
+    "print(len(sample_list_2))\n"
    ]
   },
   {
@@ -307,9 +462,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "57\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "set2=set(sample_list_2)\n",
+    "print(len(set2))"
    ]
   },
   {
@@ -323,9 +487,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 1, 3, 5, 6, 8, 10, 14, 15, 16, 19, 20, 29, 32, 33, 37, 38, 39, 40, 47, 49, 50, 52, 53, 58, 61, 62, 63, 68, 73, 75, 79, 88, 89, 90}\n",
+      "{0, 1, 3, 5, 6, 8, 10, 14, 15, 16, 19, 20, 29, 32, 33, 37, 38, 39, 40, 47, 49, 50, 52, 53, 58, 61, 62, 63, 68, 73, 75, 79, 88, 89, 90}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "set3=set1-set2\n",
+    "inters3=set1.difference(set2)\n",
+    "print(set3)\n",
+    "print(inters3)\n"
    ]
   },
   {
@@ -339,9 +515,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{96, 34, 66, 67, 43, 12, 13, 46, 80, 18, 83, 23}\n",
+      "{96, 34, 66, 67, 43, 12, 13, 46, 80, 18, 83, 23}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "set4=set2-set1\n",
+    "inters4=set2.difference(set1)\n",
+    "print(set4)\n",
+    "print(inters4)"
    ]
   },
   {
@@ -355,9 +543,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{2, 4, 7, 11, 17, 21, 22, 25, 26, 28, 30, 31, 35, 36, 41, 42, 44, 45, 48, 51, 54, 56, 57, 59, 60, 64, 65, 69, 70, 71, 72, 74, 76, 78, 82, 84, 85, 86, 87, 91, 92, 93, 97, 98, 99}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "set5=set1.intersection(set2)\n",
+    "print(set5)"
    ]
   },
   {
@@ -395,9 +592,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'set'>\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "set6=set()\n",
+    "print(type(set6))"
    ]
   },
   {
@@ -411,9 +617,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 1, 2, 3, 4, 5, 6, 7, 8, 10, 11, 14, 15, 16, 17, 19, 20, 21, 22, 25, 26, 28, 29, 30, 31, 32, 33, 35, 36, 37, 38, 39, 40, 41, 42, 44, 45, 47, 48, 49, 50, 51, 52, 53, 54, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 68, 69, 70, 71, 72, 73, 74, 75, 76, 78, 79, 82, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 97, 98, 99}\n",
+      "{0, 1, 2, 3, 4, 5, 6, 7, 8, 10, 11, 14, 15, 16, 17, 19, 20, 21, 22, 25, 26, 28, 29, 30, 31, 32, 33, 35, 36, 37, 38, 39, 40, 41, 42, 44, 45, 47, 48, 49, 50, 51, 52, 53, 54, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 68, 69, 70, 71, 72, 73, 74, 75, 76, 78, 79, 82, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 97, 98, 99}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "set6.update(set3,set5)\n",
+    "\n",
+    "print(set6)\n",
+    "print(set1)"
    ]
   },
   {
@@ -427,9 +645,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "print(set1 == set6)"
    ]
   },
   {
@@ -443,9 +669,19 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "print(set2.issubset(set1))\n",
+    "print(set3.issubset(set1))"
    ]
   },
   {
@@ -459,9 +695,33 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 1, 3, 5, 6, 8, 10, 14, 15, 16, 19, 20, 29, 32, 33, 37, 38, 39, 40, 47, 49, 50, 52, 53, 58, 61, 62, 63, 68, 73, 75, 79, 88, 89, 90}\n",
+      "{96, 34, 66, 67, 43, 12, 13, 46, 80, 18, 83, 23}\n",
+      "nuevoset {0, 1, 2, 3, 4, 5, 6, 7, 8, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 25, 26, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 78, 79, 80, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 96, 97, 98, 99}\n",
+      "set1 {0, 1, 2, 3, 4, 5, 6, 7, 8, 10, 11, 14, 15, 16, 17, 19, 20, 21, 22, 25, 26, 28, 29, 30, 31, 32, 33, 35, 36, 37, 38, 39, 40, 41, 42, 44, 45, 47, 48, 49, 50, 51, 52, 53, 54, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 68, 69, 70, 71, 72, 73, 74, 75, 76, 78, 79, 82, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 97, 98, 99}\n",
+      "set2 {2, 4, 7, 11, 12, 13, 17, 18, 21, 22, 23, 25, 26, 28, 30, 31, 34, 35, 36, 41, 42, 43, 44, 45, 46, 48, 51, 54, 56, 57, 59, 60, 64, 65, 66, 67, 69, 70, 71, 72, 74, 76, 78, 80, 82, 83, 84, 85, 86, 87, 91, 92, 93, 96, 97, 98, 99}\n",
+      "{0, 1, 2, 3, 4, 5, 6, 7, 8, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 25, 26, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 78, 79, 80, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 96, 97, 98, 99}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "print(set3)\n",
+    "print(set4)\n",
+    "nuevoset=set3.union(set4,set5)\n",
+    "\n",
+    "\n",
+    "print(\"nuevoset\",nuevoset)\n",
+    "print(\"set1\",set1)\n",
+    "print(\"set2\",set2)\n",
+    "nuevoset=nuevoset.union(set1,set2)\n",
+    "\n",
+    "print(nuevoset)\n",
+    "#set3.union(set1,set2)"
    ]
   },
   {
@@ -475,9 +735,19 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 1, 3, 5, 6, 8, 10, 14, 15, 16, 19, 20, 29, 32, 33, 37, 38, 39, 40, 47, 49, 50, 52, 53, 58, 61, 62, 63, 68, 73, 75, 79, 88, 89, 90}\n",
+      "{96, 34, 66, 67, 43, 12, 13, 46, 80, 18, 83, 23}\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "#no entiendo"
    ]
   },
   {
@@ -491,9 +761,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 10, 11, 14, 15, 16, 17, 19, 20, 21, 22, 25, 26, 28, 29, 30, 31, 32, 33, 35, 36, 37, 38, 39, 40, 41, 42, 44, 45, 47, 48, 49, 50, 51, 52, 53, 54, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 68, 69, 70, 71, 72, 73, 74, 75, 76, 78, 79, 82, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 97, 98, 99]\n",
+      "{2, 3, 4, 5, 6, 7, 8, 10, 11, 14, 15, 16, 17, 19, 20, 21, 22, 25, 26, 28, 29, 30, 31, 32, 33, 35, 36, 37, 38, 39, 40, 41, 42, 44, 45, 47, 48, 49, 50, 51, 52, 53, 54, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 68, 69, 70, 71, 72, 73, 74, 75, 76, 78, 79, 82, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 97, 98, 99}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "set1=list(set1)\n",
+    "print(set1)\n",
+    "set1.pop(0)\n",
+    "set1=set(set1)\n",
+    "print(set1)"
    ]
   },
   {
@@ -616,7 +899,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -630,7 +913,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.12"
   },
   "toc": {
    "base_numbering": 1,
@@ -673,6 +956,11 @@
     "_Feature"
    ],
    "window_display": false
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "1551151381e773f0aad4d7f5dd85d557969b09f98d8f1647db122078155b292b"
+   }
   }
  },
  "nbformat": 4,
