--- a/your-code/Solutions.ipynb
+++ b/your-code/Solutions.ipynb
@@ -574,11 +574,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 184,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "set1 tiene los siguientes elementos 78, set2 tiene los siguientes elementos 57 y siguiendo la formula los elementos tras la unión de ambos son 45\n",
+      "set1 tiene los siguientes elementos 78, set3 tiene los siguientes elementos 35 y siguiendo la formula los elementos tras la unión de ambos son 47\n",
+      "set1 tiene los siguientes elementos 78, set4 tiene los siguientes elementos 12 y siguiendo la formula los elementos tras la unión de ambos son 90\n",
+      "set1 tiene los siguientes elementos 78, set5 tiene los siguientes elementos 45 y siguiendo la formula los elementos tras la unión de ambos son 33\n",
+      "set1 tiene los siguientes elementos 57, set3 tiene los siguientes elementos 35 y siguiendo la formula los elementos tras la unión de ambos son 57\n",
+      "set1 tiene los siguientes elementos 57, set2 tiene los siguientes elementos 12 y siguiendo la formula los elementos tras la unión de ambos son 90\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "setprueba1=set1.union(set2)-set1.intersection(set2)\n",
+    "setprueba1_3=set1.union(set3)-set1.intersection(set3)\n",
+    "setprueba1_4=set1.union(set4)-set1.intersection(set4)\n",
+    "setprueba1_5=set1.union(set5)-set1.intersection(set5)\n",
+    "setprueba2_3=set1.union(set2)-set1.intersection(set3)\n",
+    "setprueba2_4=set1.union(set2)-set1.intersection(set4)\n",
+    "print(f'set1 tiene los siguientes elementos {len(set1)}, set2 tiene los siguientes elementos {len(set2)} y siguiendo la formula los elementos tras la unión de ambos son {len(setprueba1)}' )\n",
+    "\n",
+    "print(f'set1 tiene los siguientes elementos {len(set1)}, set3 tiene los siguientes elementos {len(set3)} y siguiendo la formula los elementos tras la unión de ambos son {len(setprueba1_3)}' )\n",
+    "\n",
+    "print(f'set1 tiene los siguientes elementos {len(set1)}, set4 tiene los siguientes elementos {len(set4)} y siguiendo la formula los elementos tras la unión de ambos son {len(setprueba1_4)}' )\n",
+    "\n",
+    "print(f'set1 tiene los siguientes elementos {len(set1)}, set5 tiene los siguientes elementos {len(set5)} y siguiendo la formula los elementos tras la unión de ambos son {len(setprueba1_5)}' )\n",
+    "\n",
+    "print(f'set1 tiene los siguientes elementos {len(set2)}, set3 tiene los siguientes elementos {len(set3)} y siguiendo la formula los elementos tras la unión de ambos son {len(setprueba2_3)}' )\n",
+    "\n",
+    "print(f'set1 tiene los siguientes elementos {len(set2)}, set2 tiene los siguientes elementos {len(set4)} y siguiendo la formula los elementos tras la unión de ambos son {len(setprueba2_4)}' )\n",
+    "#print(len(setprueba)){}"
    ]
   },
   {
@@ -693,31 +723,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{0, 1, 3, 5, 6, 8, 10, 14, 15, 16, 19, 20, 29, 32, 33, 37, 38, 39, 40, 47, 49, 50, 52, 53, 58, 61, 62, 63, 68, 73, 75, 79, 88, 89, 90}\n",
+      "set3 = {0, 1, 3, 5, 6, 8, 10, 14, 15, 16, 19, 20, 29, 32, 33, 37, 38, 39, 40, 47, 49, 50, 52, 53, 58, 61, 62, 63, 68, 73, 75, 79, 88, 89, 90}\n",
       "{96, 34, 66, 67, 43, 12, 13, 46, 80, 18, 83, 23}\n",
       "nuevoset {0, 1, 2, 3, 4, 5, 6, 7, 8, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 25, 26, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 78, 79, 80, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 96, 97, 98, 99}\n",
-      "set1 {0, 1, 2, 3, 4, 5, 6, 7, 8, 10, 11, 14, 15, 16, 17, 19, 20, 21, 22, 25, 26, 28, 29, 30, 31, 32, 33, 35, 36, 37, 38, 39, 40, 41, 42, 44, 45, 47, 48, 49, 50, 51, 52, 53, 54, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 68, 69, 70, 71, 72, 73, 74, 75, 76, 78, 79, 82, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 97, 98, 99}\n",
+      "set1 {2, 3, 4, 5, 6, 7, 8, 10, 11, 14, 15, 16, 17, 19, 20, 21, 22, 25, 26, 28, 29, 30, 31, 32, 33, 35, 36, 37, 38, 39, 40, 41, 42, 44, 45, 47, 48, 49, 50, 51, 52, 53, 54, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 68, 69, 70, 71, 72, 73, 74, 75, 76, 78, 79, 82, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 97, 98, 99}\n",
       "set2 {2, 4, 7, 11, 12, 13, 17, 18, 21, 22, 23, 25, 26, 28, 30, 31, 34, 35, 36, 41, 42, 43, 44, 45, 46, 48, 51, 54, 56, 57, 59, 60, 64, 65, 66, 67, 69, 70, 71, 72, 74, 76, 78, 80, 82, 83, 84, 85, 86, 87, 91, 92, 93, 96, 97, 98, 99}\n",
       "{0, 1, 2, 3, 4, 5, 6, 7, 8, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 25, 26, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 78, 79, 80, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 96, 97, 98, 99}\n"
      ]
     }
    ],
    "source": [
-    "print(set3)\n",
-    "print(set4)\n",
+    "\n",
     "nuevoset=set3.union(set4,set5)\n",
     "\n",
     "\n",
     "print(\"nuevoset\",nuevoset)\n",
-    "print(\"set1\",set1)\n",
-    "print(\"set2\",set2)\n",
+    "\n",
     "nuevoset=nuevoset.union(set1,set2)\n",
     "\n",
     "print(nuevoset)\n",
@@ -733,21 +761,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{0, 1, 3, 5, 6, 8, 10, 14, 15, 16, 19, 20, 29, 32, 33, 37, 38, 39, 40, 47, 49, 50, 52, 53, 58, 61, 62, 63, 68, 73, 75, 79, 88, 89, 90}\n",
-      "{96, 34, 66, 67, 43, 12, 13, 46, 80, 18, 83, 23}\n",
-      "False\n"
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n"
      ]
     }
    ],
    "source": [
-    "#no entiendo"
+    "print(set1.issubset(nuevoset))\n",
+    "print(set2.issubset(nuevoset))\n",
+    "print(set3.issubset(nuevoset))\n",
+    "print(set4.issubset(nuevoset))\n",
+    "print(set5.issubset(nuevoset))"
    ]
   },
   {
@@ -792,11 +826,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 152,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "e= 1\n",
+      "e= 9\n",
+      "e= 11\n",
+      "Se ha eliminado el elemento 11\n",
+      "e= 21\n",
+      "Se ha eliminado el elemento 21\n",
+      "e= 31\n",
+      "Se ha eliminado el elemento 31\n",
+      "e= 41\n",
+      "Se ha eliminado el elemento 41\n",
+      "e= 51\n",
+      "Se ha eliminado el elemento 51\n",
+      "e= 61\n",
+      "Se ha eliminado el elemento 61\n",
+      "e= 71\n",
+      "Se ha eliminado el elemento 71\n",
+      "e= 81\n",
+      "e= 89\n",
+      "Se ha eliminado el elemento 89\n",
+      "e= 99\n",
+      "Se ha eliminado el elemento 99\n",
+      "[1, 9, 19, 29, 39, 49, 59, 69, 79, 81, 91]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "list_to_remove = [1, 9, 11, 19, 21, 29, 31, 39, 41, 49, 51, 59, 61, 69, 71, 79, 81, 89, 91, 99]\n",
+    "\n",
+    "for e in list_to_remove:\n",
+    "    print(\"e=\",e)\n",
+    "    for i in set1:\n",
+    "        if e==i:\n",
+    "            list_to_remove.remove(e)\n",
+    "            print(\"Se ha eliminado el elemento {}\".format(e))\n",
+    "        else:\n",
+    "            \"no estaba en la lista\"\n",
+    "            \n",
+    "print(list_to_remove)"
    ]
   },
   {
@@ -814,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -848,11 +922,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 161,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'a': 8, 'about': 1, 'all': 1, 'although': 3, 'and': 23, 'are': 1, 'at': 1, 'baby': 14, 'backseat': 1, 'bag': 1, 'bar': 1, 'be': 16, 'bedsheets': 3, 'begin': 1, 'best': 1, 'body': 17, 'boy': 2, 'brand': 6, 'can': 1, 'chance': 1, 'club': 1, 'come': 37, 'conversation': 1, 'crazy': 2, 'dance': 1, 'date': 1, 'day': 6, 'discovering': 6, 'do': 3, 'doing': 2, \"don't\": 2, 'drinking': 1, 'driver': 1, 'eat': 1, 'every': 6, 'falling': 3, 'family': 1, 'fast': 1, 'fill': 2, 'find': 1, 'first': 1, 'follow': 6, 'for': 3, 'friends': 1, 'get': 1, 'girl': 2, 'give': 1, 'go': 2, 'going': 1, 'grab': 2, 'hand': 1, 'handmade': 2, 'heart': 3, 'hours': 2, 'how': 1, 'i': 6, \"i'll\": 1, \"i'm\": 23, 'in': 27, 'is': 5, \"isn't\": 1, 'it': 1, 'jukebox': 1, 'just': 1, 'kiss': 1, 'know': 2, 'last': 3, 'lead': 6, 'leave': 1, 'let': 1, \"let's\": 2, 'like': 10, 'love': 25, 'lover': 1, 'magnet': 3, 'make': 1, 'man': 1, 'may': 2, 'me': 10, 'mind': 2, 'much': 2, 'my': 33, 'new': 6, 'night': 3, 'not': 2, 'now': 11, 'of': 6, 'okay': 1, 'on': 40, 'one': 1, 'our': 1, 'out': 1, 'over': 1, 'place': 1, 'plate': 1, 'play': 1, 'pull': 3, 'push': 3, 'put': 3, 'radio': 1, 'room': 3, 'say': 2, 'shape': 6, 'shots': 1, 'singing': 2, 'slow': 1, 'smell': 3, 'so': 2, 'somebody': 2, 'something': 6, 'sour': 1, 'start': 2, 'stop': 1, 'story': 1, 'sweet': 1, 'table': 1, 'take': 1, 'talk': 4, 'taxi': 1, 'tell': 1, 'that': 2, 'the': 18, 'then': 3, 'thrifty': 1, 'to': 2, 'too': 5, 'trust': 1, 'up': 3, 'van': 1, 'waist': 2, 'want': 2, 'was': 2, 'we': 7, \"we're\": 1, 'week': 1, 'were': 3, 'where': 1, 'with': 22, 'you': 16, 'your': 21}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "llaves=list(word_freq.keys())\n",
+    "llaves.sort()\n",
+    "word_freq2={}\n",
+    "for k in llaves:\n",
+    "    word_freq2[k]=word_freq[k]\n",
+    "    \n",
+    "print(word_freq2)"
    ]
   },
   {
@@ -889,11 +977,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "word_freq={'conversation': 1, \"we're\": 1, 'plate': 1, 'sour': 1, 'jukebox': 1, 'taxi': 1, 'fast': 1, 'bag': 1, 'man': 1, 'going': 1, 'one': 1, 'backseat': 1, 'friends': 1, 'take': 1, 'play': 1, 'okay': 1, 'begin': 1, 'over': 1, 'just': 1, 'are': 1, 'tell': 1, 'drinking': 1, 'our': 1, 'where': 1, \"i'll\": 1, 'all': 1, \"isn't\": 1, 'make': 1, 'lover': 1, 'get': 1, 'radio': 1, 'give': 1, 'can': 1, 'club': 1, 'it': 1, 'out': 1, 'chance': 1, 'first': 1, 'table': 1, 'thrifty': 1, 'driver': 1, 'slow': 1, 'dance': 1, 'trust': 1, 'family': 1, 'week': 1, 'date': 1, 'leave': 1, 'at': 1, 'hand': 1, 'how': 1, 'eat': 1, 'about': 1, 'story': 1, 'sweet': 1, 'best': 1, 'let': 1, 'van': 1, 'shots': 1, 'place': 1, 'find': 1, 'kiss': 1, 'stop': 1, 'bar': 1, \"don't\": 2, 'mind': 2, 'know': 2, 'so': 2, 'start': 2, 'boy': 2, 'girl': 2, 'singing': 2, 'doing': 2, 'somebody': 2, 'handmade': 2, 'may': 2, 'that': 2, 'much': 2, 'grab': 2, 'was': 2, 'say': 2, 'waist': 2, 'want': 2, \"let's\": 2, 'not': 2, 'crazy': 2, 'go': 2, 'to': 2, 'fill': 2, 'hours': 2, 'push': 3, 'then': 3, 'put': 3, 'room': 3, 'magnet': 3, 'up': 3, 'pull': 3, 'last': 3, 'do': 3, 'smell': 3, 'although': 3, 'falling': 3, 'were': 3, 'night': 3, 'heart': 3, 'for': 3, 'bedsheets': 3, 'talk': 4, 'too': 5, 'is': 5, 'every': 6, 'new': 6, 'follow': 6, 'brand': 6, 'of': 6, 'i': 6, 'day': 6, 'lead': 6, 'shape': 6, 'discovering': 6, 'something': 6, 'we': 7, 'a': 8, 'like': 10, 'me': 10, 'now': 11, 'baby': 14, 'you': 16, 'be': 16, 'body': 17, 'the': 18, 'your': 21, 'with': 22, \"i'm\": 23, 'and': 23, 'love': 25, 'in': 27, 'my': 33, 'come': 37, 'on': 40}# Your code here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'conversation': 1, \"we're\": 1, 'plate': 1, 'sour': 1, 'jukebox': 1, 'taxi': 1, 'fast': 1, 'bag': 1, 'man': 1, 'going': 1, 'one': 1, 'backseat': 1, 'friends': 1, 'take': 1, 'play': 1, 'okay': 1, 'begin': 1, 'over': 1, 'just': 1, 'are': 1, 'tell': 1, 'drinking': 1, 'our': 1, 'where': 1, \"i'll\": 1, 'all': 1, \"isn't\": 1, 'make': 1, 'lover': 1, 'get': 1, 'radio': 1, 'give': 1, 'can': 1, 'club': 1, 'it': 1, 'out': 1, 'chance': 1, 'first': 1, 'table': 1, 'thrifty': 1, 'driver': 1, 'slow': 1, 'dance': 1, 'trust': 1, 'family': 1, 'week': 1, 'date': 1, 'leave': 1, 'at': 1, 'hand': 1, 'how': 1, 'eat': 1, 'about': 1, 'story': 1, 'sweet': 1, 'best': 1, 'let': 1, 'van': 1, 'shots': 1, 'place': 1, 'find': 1, 'kiss': 1, 'stop': 1, 'bar': 1, \"don't\": 2, 'mind': 2, 'know': 2, 'so': 2, 'start': 2, 'boy': 2, 'girl': 2, 'singing': 2, 'doing': 2, 'somebody': 2, 'handmade': 2, 'may': 2, 'that': 2, 'much': 2, 'grab': 2, 'was': 2, 'say': 2, 'waist': 2, 'want': 2, \"let's\": 2, 'not': 2, 'crazy': 2, 'go': 2, 'to': 2, 'fill': 2, 'hours': 2, 'push': 3, 'then': 3, 'put': 3, 'room': 3, 'magnet': 3, 'up': 3, 'pull': 3, 'last': 3, 'do': 3, 'smell': 3, 'although': 3, 'falling': 3, 'were': 3, 'night': 3, 'heart': 3, 'for': 3, 'bedsheets': 3, 'talk': 4, 'too': 5, 'is': 5, 'every': 6, 'new': 6, 'follow': 6, 'brand': 6, 'of': 6, 'i': 6, 'day': 6, 'lead': 6, 'shape': 6, 'discovering': 6, 'something': 6, 'we': 7, 'a': 8, 'like': 10, 'me': 10, 'now': 11, 'baby': 14, 'you': 16, 'be': 16, 'body': 17, 'the': 18, 'your': 21, 'with': 22, \"i'm\": 23, 'and': 23, 'love': 25, 'in': 27, 'my': 33, 'come': 37, 'on': 40}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import operator\n",
+    "sorted_tups = sorted(word_freq.items(), key=operator.itemgetter(1))\n",
+    "#print(sorted_tups)\n",
+    "\n",
+    "word_freq2={}\n",
+    "\n",
+    "for i,e in sorted_tups:\n",
+    "    word_freq2[i]=e\n",
+    "    \n",
+    "print(word_freq2)\n",
+    "\n",
+    "\n"
    ]
   }
  ],
