--- a/your-code/Solutions.ipynb
+++ b/your-code/Solutions.ipynb
@@ -91,7 +91,9 @@
    "source": [
     "tup.append(\"r\", \"o\", \"n\", \"h\", \"a\", \"c\", \"k\")\n",
     "\n",
-    "#Da error porque las tuplas son inmutables y no tienen el comando append\n"
+    "#Da error porque las tuplas son inmutables y no tienen el comando append pero se podría hacer \n",
+    "# convirtiendolo en una lista como se hace en el ejercicio de abajo\n",
+    "\n"
    ]
   },
   {
@@ -608,7 +610,8 @@
     "print(f'set1 tiene los siguientes elementos {len(set2)}, set3 tiene los siguientes elementos {len(set3)} y siguiendo la formula los elementos tras la unión de ambos son {len(setprueba2_3)}' )\n",
     "\n",
     "print(f'set1 tiene los siguientes elementos {len(set2)}, set2 tiene los siguientes elementos {len(set4)} y siguiendo la formula los elementos tras la unión de ambos son {len(setprueba2_4)}' )\n",
-    "#print(len(setprueba)){}"
+    "\n",
+    "#Todas las relaciones seguirían de la misma manera"
    ]
   },
   {
@@ -659,9 +662,7 @@
    ],
    "source": [
     "set6.update(set3,set5)\n",
-    "\n",
-    "print(set6)\n",
-    "print(set1)"
+    "print(set6)"
    ]
   },
   {
