--- a/your-code/Solutions.ipynb
+++ b/your-code/Solutions.ipynb
@@ -923,25 +923,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (3782134895.py, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"/var/folders/41/xnksc3m541lchdrncpcngj8r0000gn/T/ipykernel_26697/3782134895.py\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    for list_to_remove in set1\u001b[0m\n\u001b[0m                              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3, 4, 5, 6, 7, 8, 10, 11, 12, 14, 15, 17, 20, 21, 24, 26, 27, 29, 31, 32, 33, 34, 38, 42, 43, 46, 47, 49, 51, 53, 54, 55, 56, 59, 60, 62, 65, 67, 73, 74, 75, 76, 77, 78, 79]\n"
      ]
     }
    ],
    "source": [
     "# Your code here\n",
     "list_to_remove = [1, 9, 11, 19, 21, 29, 31, 39, 41, 49, 51, 59, 61, 69, 71, 79, 81, 89, 91, 99]\n",
+    "p = list(set1)\n",
     "\n",
-    "setl = set(list_to_remove)\n",
-    "k =set1.intersection\n",
-    "\n",
+    "total = []\n",
+    "for lista in (list_to_remove, p):\n",
+    "    for item in lista:\n",
+    "        if item not in total and not (item  in list_to_remove and item  in p):\n",
+    "            total.append(item)\n",
+    "print(p)\n",
     "\n"
    ]
   },
